[package]
name = "wasm-color-string"
version = "0.1.0"
authors = ["xhnatiuk <maximilian.hnatiuk@gmail.com>"]
edition = "2018"
description = "WebAssembly library for parsing and generating CSS color strings"
readme = "./README.md"
homepage = "https://github.com/xhnatiuk/wasm-color-string"
repository = "https://github.com/xhnatiuk/wasm-color-string"
license = "MIT OR Apache-2.0"
exclude = [".gitignore"]


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4"
regex = "1.5"
wasm-bindgen = "0.2.63"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = 'z'
